external-crates/move/crates/move-compiler/tests/development/enums/matching/invalid_empty_ctor.move
module 0x42::m {

    public enum Empty has drop {
        None
    }

    fun main() {
        let _x = Empty::None { };
        let _x = Empty::None();
    }

}
